logs/rc_analyzer_20250616_021458.log
2025-06-16 02:14:58,611 - __main__ - INFO - Starting Radiochromic Film Analyzer
2025-06-16 02:14:58,653 - app.rc_analyzer - INFO - Initializing RCAnalyzer application
2025-06-16 02:14:58,659 - app.rc_analyzer - INFO - Cleaned up local temp directory: C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\temp
2025-06-16 02:14:58,659 - app.rc_analyzer - INFO - Cleaned up log and temporary files
2025-06-16 02:14:58,659 - app.utils.config_manager - INFO - Configuration manager initialized
2025-06-16 02:14:58,659 - app.utils.config_manager - INFO - Configuration loaded from file
2025-06-16 02:14:58,675 - app.core.image_processor - INFO - System info: {'platform': 'Windows', 'processor': 'AMD64 Family 23 Model 113 Stepping 0, AuthenticAMD', 'cpu_count': 12, 'memory_gb': 31.94003677368164, 'python_version': '3.12.0', 'opencv_version': '4.11.0'}
2025-06-16 02:14:58,675 - app.core.image_processor - WARNING - CUDA test matrix creation failed: OpenCV(4.11.0) D:\a\opencv-python\opencv-python\opencv\modules\core\include\opencv2/core/private.cuda.hpp:106: error: (-216:No CUDA support) The library is compiled without CUDA support in function 'throw_no_cuda'

2025-06-16 02:14:58,676 - app.core.image_processor - WARNING - Alternative CUDA test failed: OpenCV(4.11.0) :-1: error: (-5:Bad argument) in function 'createGpuMatFromCudaMemory'
> Overload resolution failed:
>  - createGpuMatFromCudaMemory() missing required argument 'type' (pos 3)
>  - createGpuMatFromCudaMemory() missing required argument 'cudaMemoryAddress' (pos 3)

2025-06-16 02:14:58,762 - app.core.image_processor - INFO - NVIDIA GPU detected: nvidia quadro p600
2025-06-16 02:14:58,762 - app.core.image_processor - INFO - CUDA initialization failed. Setting GPU as available but with warning.
2025-06-16 02:14:58,762 - app.core.image_processor - INFO - To fix CUDA issues, try:
2025-06-16 02:14:58,762 - app.core.image_processor - INFO - 1. Install the latest NVIDIA drivers
2025-06-16 02:14:58,762 - app.core.image_processor - INFO - 2. Install CUDA toolkit compatible with your GPU
2025-06-16 02:14:58,762 - app.core.image_processor - INFO - 3. Use 'Force enable GPU' option in settings
2025-06-16 02:14:58,763 - app.core.image_processor - INFO - GPU acceleration available. Enabled: False
2025-06-16 02:14:58,763 - app.core.image_processor - INFO - Image processor initialized
2025-06-16 02:14:58,763 - app.utils.file_manager - INFO - File manager initialized
2025-06-16 02:14:58,779 - app.plugins.plugin_manager - ERROR - Failed to load plugin 'auto_measurements': unexpected indent (auto_measurements.py, line 632)
Traceback (most recent call last):
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\app\plugins\plugin_manager.py", line 66, in scan_plugins
    module = self._load_module(name, path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\app\plugins\plugin_manager.py", line 196, in _load_module
    loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 990, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1128, in get_code
  File "<frozen importlib._bootstrap_external>", line 1058, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\Pablo\OneDrive - UAM\2 Proyectos\1 Otros\0 Software_propio_utilidades\RC\analizadorrc\custom_plugins\auto_measurements.py", line 632
    self._canvas.config(cursor="crosshair")
IndentationError: unexpected indent
2025-06-16 02:14:58,790 - app.ui.image_panel - INFO - Image panel initialized
2025-06-16 02:14:58,807 - app.ui.measurement_panel - INFO - Measurement panel initialized
2025-06-16 02:14:58,814 - app.ui.image_settings_panel - INFO - Image settings panel initialized
2025-06-16 02:14:58,815 - app.ui.main_window - INFO - Main window initialized
2025-06-16 02:14:58,816 - app.rc_analyzer - INFO - RCAnalyzer initialization complete
2025-06-16 02:15:02,638 - app.ui.main_window - INFO - Loading image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC14int_14ext.tiff (Size: 14.76 MB)
2025-06-16 02:15:02,776 - app.core.image_processor - INFO - Loading image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC14int_14ext.tiff, size: 2550x3510
2025-06-16 02:15:02,780 - app.core.image_processor - INFO - Computing integral images for fast statistics
2025-06-16 02:15:02,920 - app.core.image_processor - INFO - Integral images computed successfully
2025-06-16 02:15:02,920 - app.core.image_processor - INFO - Loaded image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC14int_14ext.tiff
2025-06-16 02:15:03,829 - app.core.image_processor - INFO - Computing integral images for fast statistics
2025-06-16 02:15:03,988 - app.core.image_processor - INFO - Integral images computed successfully
2025-06-16 02:15:03,991 - app.core.image_processor - INFO - Calibration applied successfully – dose image ready (3-channel float32)
2025-06-16 02:15:04,014 - app.ui.main_window - INFO - Loaded image: C:\Users\Pablo\OneDrive - UAM\4 Protonterapia\1 Experimentos\1 Experimentos\2025_05_06_PT\scans_070525\RC14int_14ext.tiff
